WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279275
Release assert in TimerBase::TimerBase on a worker thread
https://bugs.webkit.org/show_bug.cgi?id=279275
Summary
Release assert in TimerBase::TimerBase on a worker thread
Ryosuke Niwa
Reported
2024-09-06 12:10:55 PDT
e.g. Thread 32 name: WebCore: Worker Thread 32 Crashed: 0 WebCore 0x1a17f7e88 WTFCrashWithInfo(int, char const*, char const*, int) + 3391112 [inlined] 1 WebCore 0x1a17f7e88 WebCore::TimerBase::TimerBase() + 3391112 [inlined] 2 WebCore 0x1a17f7e88 WebCore::Timer::Timer<WebCore::Performance, WebCore::Performance>(WebCore::Performance&, void (WebCore::Performance::*)()) + 3391112 [inlined] 3 WebCore 0x1a17f7e88 WebCore::Timer::Timer<WebCore::Performance, WebCore::Performance>(WebCore::Performance&, void (WebCore::Performance::*)()) + 3391112 [inlined] 4 WebCore 0x1a17f7e88 WebCore::Performance::Performance(WebCore::ScriptExecutionContext*, WTF::MonotonicTime) + 3391112 [inlined] 5 WebCore 0x1a17f7e88 WebCore::Performance::Performance(WebCore::ScriptExecutionContext*, WTF::MonotonicTime) + 3391112 6 WebCore 0x1a3dc4bd3 WebCore::Performance::create(WebCore::ScriptExecutionContext*, WTF::MonotonicTime) + 43027411 [inlined] 7 WebCore 0x1a3dc4bd3 WebCore::WorkerGlobalScope::WorkerGlobalScope(WebCore::WorkerThreadType, WebCore::WorkerParameters const&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WebCore::WorkerThread&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WebCore::IDBClient::IDBConnectionProxy*, WebCore::SocketProvider*, std::__1::unique_ptr<WebCore::WorkerClient, std::__1::default_delete<WebCore::WorkerClient>>&&) + 43027411 8 WebCore 0x1a3dbdfcf WebCore::DedicatedWorkerGlobalScope::DedicatedWorkerGlobalScope(WebCore::WorkerParameters const&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WebCore::DedicatedWorkerThread&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WebCore::IDBClient::IDBConnectionProxy*, WebCore::SocketProvider*, std::__1::unique_ptr<WebCore::WorkerClient, std::__1::default_delete<WebCore::WorkerClient>>&&) + 42999759 [inlined] 9 WebCore 0x1a3dbdfcf WebCore::DedicatedWorkerGlobalScope::DedicatedWorkerGlobalScope(WebCore::WorkerParameters const&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WebCore::DedicatedWorkerThread&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WebCore::IDBClient::IDBConnectionProxy*, WebCore::SocketProvider*, std::__1::unique_ptr<WebCore::WorkerClient, std::__1::default_delete<WebCore::WorkerClient>>&&) + 42999759 [inlined] 10 WebCore 0x1a3dbdfcf WebCore::DedicatedWorkerGlobalScope::create(WebCore::WorkerParameters const&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WebCore::DedicatedWorkerThread&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WebCore::IDBClient::IDBConnectionProxy*, WebCore::SocketProvider*, std::__1::unique_ptr<WebCore::WorkerClient, std::__1::default_delete<WebCore::WorkerClient>>&&) + 42999759 [inlined] 11 WebCore 0x1a3dbdfcf WebCore::DedicatedWorkerThread::createWorkerGlobalScope(WebCore::WorkerParameters const&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&, WTF::Ref<WebCore::SecurityOrigin, WTF::RawPtrTraits<WebCore::SecurityOrigin>, WTF::DefaultRefDerefTraits<WebCore::SecurityOrigin>>&&) + 42999759 12 WebCore 0x1a3dda2e3 WebCore::WorkerOrWorkletThread::workerOrWorkletThread() + 43115235 13 JavaScriptCore 0x1a546a37b WTF::Function<void ()>::operator()() const + 590715 [inlined] 14 JavaScriptCore 0x1a546a37b WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) + 590715 15 JavaScriptCore 0x1a546c883 WTF::wtfThreadEntryPoint(void*) + 600195 <
rdar://134960001
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-09-06 12:14:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33254
EWS
Comment 2
2024-09-06 14:53:02 PDT
Committed
283280@main
(d9fd562a20d0): <
https://commits.webkit.org/283280@main
> Reviewed commits have been landed. Closing PR #33254 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug