Cherry-pick 283280@main (d9fd562a20d0). https://bugs.webkit.org/show_bug.cgi?id=279275

Release assert in TimerBase::TimerBase on a worker thread
    https://bugs.webkit.org/show_bug.cgi?id=279275

    Reviewed by Chris Dumez.

    Allow the release assert to pass in worker threads.

    * Source/WebCore/platform/Timer.cpp:
    (WebCore::TimerBase::TimerBase):
    (WebCore::TimerBase::setNextFireTime):
    * Source/WebCore/platform/ios/wak/WebCoreThread.h:
    * Source/WebCore/platform/ios/wak/WebCoreThread.mm:
    (WebThreadIsLockedOrDisabledInMainOrWebThread):

    Canonical link: https://commits.webkit.org/283280@main

Canonical link: https://commits.webkit.org/282416.148@webkitglib/2.46